style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
}

html {
    overflow: scroll;
    overflow-x: hidden;
}
::-webkit-scrollbar {
    width: 0;  /* Remove scrollbar space */
    background: transparent;  /* Optional: just make scrollbar invisible */
}
/* Optional: show position indicator in red */
::-webkit-scrollbar-thumb {
    background: #FF0000;
}

.navbar {
    height: 90px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1rem;
    position: sticky;
    top: 0;
    z-index: 99;
    background-color: white;
}

.navbar__container {
    display: flex;
    flex-direction: row-reverse;
    justify-content: flex-start;
    position: relative;
    height: 80px;
    z-index: 99;
    width: 100%;
    padding: 0px 0px 0px 0px;
}


#navbar__logo img {
    width: 80px;
    height: 80 px;
    flex: 0 1 auto;
    position: absolute;
    left: 50%;
    transform: translateX(-50%)
}

.navbar__menu {
    display: flex;
    align-items: center;
    list-style: none;
    text-align: center;
    margin-left: auto;
}

.navbar__item {
    height: 80px;
}

.navbar__links {
    color: #041e42;
    display: flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    padding: 0 1rem;
    height: 100%;
}

.navbar__btn{
    display: flex;
    align-items: center;
    padding: 0rem 2rem;
}

.button {
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
    padding: 10px 20px;
    height: 75%;
    width: 200px;
    border: none;
    outline: none;
    border-radius: 5px;
    background: #041e42;
    color: white;
}

.button:hover {
    background: #63666a;
    transition: all 0.3s ease;
}

.navbar__links:hover {
    font-size: 1.1rem;
    transition: all 0.3s ease;
}

@media screen and (max-width: 1280px) {
    .navbar__container {
        display: flex;
        justify-content: flex-start;
        position: relative;
        height: 80px;
        z-index: 999;
        max-width: 1300px;
        padding: 0px 0px 0px 0px;
    }

    .navbar__logo {
        flex: 0 1 auto;
        position: absolute;
        transform: translateX(-50%);
    }
    
    .navbar__menu {
        display: grid;
        grid-template-columns: auto;
        margin: 0;
        width: 100%;
        position: absolute;
        top: -600px;
        transition: all 0.5s ease;
        height: 50vh;
        z-index: -1;
        transform: translateX(-100%);
    }

    .navbar__menu.active {
        background: white;
        top: 100%;
        opacity: 1;
        transition: all 0.5 ease;
        z-index: 99;
        height: 70vh;
        font-size: 1.2rem;
    }

    .navbar__btn {
        display: flex;
        justify-content: space-around;
        margin: 0;
        width: 100%;
        z-index: 99;

    }

     .navbar__toggle {
        flex: 0 1 auto;
        margin-left: auto;
        width: 50px;
        height: 80px;
        position: relative;
        background-color: #fff;
        cursor: pointer;
        padding-right: 20px
    }

    .navbar__toggle .bar{
        width: 30px;
        height: 3px;
        margin: 8px 0;
        transition: all 0.3s ease-in-out;
        background:#63666a;
        display: block;
        cursor: pointer;
    }    
    .navbar__item {
        width: 100%;
    }

    .navbar__links {
        text-align: center;
        padding: 2rem;
        width: 100%;
        display: table;
    }

    .navbar__btn {
        padding-bottom: 2rem;
    }
    .button{
        display: flex;
        justify-content: center;
        align-items: center;
        width: 80%;
        height: 80px;
        margin: 0;
    }
    

    

    #mobile-menu.is-active .bar:nth-child(2) {
        transform: translateY(11px) rotate(45deg);
    }

    #mobile-menu.is-active .bar:nth-child(4) {
        transform: translateY(-11px) rotate(-45deg);
    }

    #mobile-menu.is-active .bar:nth-child(3) {
        opacity: 0;
    }
}

/*Hero Section CSS*/
.main {
    background-image: url(images/P1.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 54%;
    height: 800px;
    z-index: 1;
}

.main__container {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}

.main__content {
    margin: 4rem 8rem 8rem 8rem;
    text-align: center;
}

.main__content h1 {
    font-size: 5.5rem; 
    color: #fff;
    background-size: 100%;
    text-shadow: 8px 8px 8px #041e42;
}

.main__content h2 {
    font-size: 2rem;
    color: #fff;
    text-shadow: 6px 6px 6px #041e42;
    background-size: 100%;
}

.main__btn {
    font-size: 1.2rem;
    background-color: #041e42;
    margin: auto;
    color: white;
    padding: 16px 16px;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    position: relative;
    transition: all 0.35s;
    outline: none;
}

.main__btn a{
    position: relative;
    z-index: 2;
    color: white;
    text-decoration: none;
}

.main__btn:after {
    position: absolute;
    content: '';
    top: 0;
    left: 0;
    width: 0;
    height: 100%;
    background: #63666a;
    transition: all 0.3s;
    border-radius: 10px;
}

.main__btn:hover {
    color: white;
}

.main__btn:hover:after {
    width: 100%;
}

.instagram{
    display: flex;
    padding-top: 2%;
    justify-content: space-around;
}

@media screen and (max-width: 960px) {
    .main__container {
        display: flex;
        justify-content: space-between;
        height: fit-content;
        width: 100%;
    }

    .main__content {
        display: inline-block;
        width: 0;
        margin: 4em 8rem 2rem 8rem;
        padding: 1px 0; 
    }

    .main__content h1 {
        font-size: 4rem;
    }

    .main__content h2 {
        font-size: 2rem;
    }
    
}
/* ... */

